--- a/ASSETS/CSS/styles.css
+++ b/ASSETS/CSS/styles.css
@@ -1,8 +1,5 @@
 body {
     background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 h1 {
@@ -12,6 +9,7 @@ h1 {
 img {
     width: 400px;
     height: 300px;
+    display: block;
     margin: auto;
     border-radius: 8px;
 }
